@@ -111,6 +111,13 @@ Unless you override it,
 commands which write to the microcontroller will perform 
 a validation step that rereads the data which was written,
 compares it to the expected result, and reports any errors.
+</p>
+<p>
+Note that unlike Atmel's BatchISP program, dfu-programmer will
+only perform a single operation at a time. Erasing and programming
+require separate commands.
+</p>
+
 <h4><b>configure</b> register [--suppress-validation] data</h4>
 <p>
 Bootloaders for 8051 based controllers support writing certain
